Agregué links a los iconos de footer

--- a/index.html
+++ b/index.html
@@ -328,16 +328,16 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="iconos-sociales-footer">
-              <a href=""
+              <a href="https://www.linkedin.com/in/danielrojasdop/" target="_blank"
                 ><i class="fa-brands fa-linkedin" style="color: #f3c03e"></i
               ></a>
-              <a href=""
+              <a href="https://github.com/notdanielrojas" target="_blank"
                 ><i class="fa-brands fa-github" style="color: #f3c03e"></i
               ></a>
-              <a href=""
+              <a href="https://www.instagram.com/notdanielrojas/" target="_blank"
                 ><i class="fa-brands fa-instagram" style="color: #f3c03e"></i
               ></a>
-              <a href=""
+              <a href="https://twitter.com/notdanielrojas" target="_blank"
                 ><i class="fa-brands fa-x-twitter" style="color: #f3c03e"></i
               ></a>
             </div>
