Agregado texto alternativo a imagenes restantes

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="container text-center">
         <div class="row align-items-center">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <img src="./assets/img/banner.png" alt="..." />
+            <img src="./assets/img/banner.png" alt="Imagen de Daniel Rojas" />
           </div>
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <p class="header-text">Full Stack JavaScript Developer</p>
@@ -202,7 +202,7 @@
                   ><img
                     src="./assets/img/landing_page.jpg"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Imagen de Proyecto Landing Page"
                 /></a>
                 <div class="card-body">
                   <h5 class="card-title">Landing Page</h5>
@@ -221,7 +221,7 @@
                   ><img
                     src="./assets/img/iguana_page.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Imagen de Proyecto Iguana Page"
                 /></a>
                 <div class="card-body">
                   <h5 class="card-title">Iguana Page</h5>
@@ -240,7 +240,7 @@
                   ><img
                     src="./assets/img/cuppon.jpg"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Imagen de Proyecto Cuppon"
                 /></a>
                 <div class="card-body">
                   <h5 class="card-title">Cuppon</h5>
@@ -259,7 +259,7 @@
                   ><img
                     src="./assets/img/github.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Imagen de Proyecto Github"
                 /></a>
                 <div class="card-body">
                   <h5 class="card-title">Github</h5>
