Modificados estilos de textps, íconos de menú,  distribución de contenido y descripción de portafolio

--- a/index.html
+++ b/index.html
@@ -55,16 +55,32 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ms-auto">
                 <a
-                  class="nav-link active text-white fs-4"
+                  class="nav-link active text-white"
                   aria-current="page"
                   href="#home"
-                  >Inicio</a
-                >
-                <a class="nav-link text-white fs-4" href="#about">Acerca</a>
-                <a class="nav-link text-white fs-4" href="#portfolio"
-                  >Portafolio</a
-                >
-                <a class="nav-link text-white fs-4" href="#form">Contacto</a>
+                  ><i
+                    class="fa-solid fa-house fa-2x me-3"
+                    style="color: #f3c03e"
+                  ></i
+                ></a>
+                <a class="nav-link text-white text-warning" href="#about"
+                  ><i
+                    class="fa-solid fa-circle-info fa-2x me-3"
+                    style="color: #f3c03e"
+                  ></i
+                ></a>
+                <a class="nav-link text-white me-3" href="#portfolio"
+                  ><i
+                    class="fa-solid fa-briefcase fa-2x"
+                    style="color: #f3c03e"
+                  ></i
+                ></a>
+                <a class="nav-link text-white" href="#form"
+                  ><i
+                    class="fa-solid fa-envelope fa-2x me-5"
+                    style="color: #f3c03e"
+                  ></i
+                ></a>
               </div>
             </div>
           </div>
@@ -93,7 +109,7 @@
     <main>
       <div id="about">
         <div class="container">
-          <div class="row text-center">
+          <div class="row text-end">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6">
               <img
                 src="./assets/img/about.jpg"
@@ -103,7 +119,7 @@
               />
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-              <h1>Acerca de mi</h1>
+              <h1><span>Acerca</span> de mi</h1>
               <p>
                 Comunicador Audiovisual titulado de UNIACC con 10 años de
                 experiencia en empresas del rubro del entretenimiento,
@@ -114,8 +130,10 @@
                 Canadá, España, Portugal, Marruecos y Francia. Gracias a mi
                 residencia en Canadá durante algunos años, tengo un manejo
                 avanzado del inglés.
-                <br />Actualmente, estoy estudiando Desarrollo FullStack
-                Developer JavaScript en Academia LATAM.
+                <br /><strong
+                  >Actualmente, estoy estudiando Desarrollo FullStack Developer
+                  JavaScript en Academia LATAM.</strong
+                >
               </p>
               <div class="mytabs">
                 <input
@@ -128,12 +146,12 @@
                 <div class="tab text-start">
                   <ul>
                     <li>
-                      <span>2023 - Actual</span><br />Desarrollador Fullstack
-                      JavaScript
+                      <span>Oct. 2023 - Actual</span><br />Desarrollador
+                      Fullstack JavaScript
                     </li>
                     <li>
-                      <span>2009 - 2015</span><br />Comunicación Audiovisual y/o
-                      Multimedia, Mención Cine
+                      <span>Mar. 2009 - Oct. 2015</span><br />Comunicación
+                      Audiovisual y/o Multimedia, Mención Cine
                     </li>
                   </ul>
                 </div>
@@ -146,19 +164,19 @@
                       Audiovisual en Vidachiropractic
                     </li>
                     <li>
-                      <span>Sep. 2018 - Abr.2022</span><br />Realizador
+                      <span>Sep. 2018 - Abr. 2022</span><br />Realizador
                       Audiovisual en Flip.tools
                     </li>
                     <li>
-                      <span>Oct. 2019 - Oct.2019</span><br />Realizador
+                      <span>Oct. 2019 - Oct. 2019</span><br />Realizador
                       Audiovisual en Webserie "Pesca Arriba, Mar Adentro"
                     </li>
                     <li>
-                      <span>Feb. 2018 - Feb.2018</span><br />Realizador
+                      <span>Feb. 2018 - Feb. 2018</span><br />Realizador
                       Audiovisual en "Art Battle Vancouver 2018"
                     </li>
                     <li>
-                      <span>Ene. 2018 - May.2018</span><br />Realizador
+                      <span>Ene. 2018 - May. 2018</span><br />Realizador
                       Audiovisual en Kleiner Services
                     </li>
                     <li>
@@ -166,12 +184,12 @@
                       Audiovisual en Fairmount Hotel
                     </li>
                     <li>
-                      <span>Ago. 2017 - Ago.2017</span><br />Realizador
+                      <span>Ago. 2017 - Ago. 2017</span><br />Realizador
                       Audiovisual en Videoclip "Starring in a movie" de Greg
                       Beamish
                     </li>
                     <li>
-                      <span>Nov. 2016 - Dic.2016</span><br />Realizador
+                      <span>Nov. 2016 - Dic. 2016</span><br />Realizador
                       Audiovisual en la segunda temporada de "Viajeras sin
                       Fronteras" de UCV
                     </li>
@@ -185,12 +203,15 @@
       <!-- Fin de Acerca -->
       <!-- Comienzo de Portafolio -->
       <div id="portfolio">
-        <div class="container text-center">
+        <div class="container">
           <div class="texto-portafolio">
-            <h1>Portafolio</h1>
+            <h1><span>Porta</span>folio</h1>
             <p>
-              Mis mejores trabajos del Módulo I - Introducción al Desarrollo Web
-              de Desafío LATAM.
+              He tenido la oportunidad de realizar diversos proyectos utilizando
+              HTML, CSS y la terminal para la creación y diseño de páginas web.
+              Además, he gestionado mis proyectos de manera eficiente utilizando
+              GitHub, aprovechando sus funciones de control de versiones y
+              colaboración.
             </p>
           </div>
           <div class="row">
@@ -279,7 +300,7 @@
         <div class="container">
           <div class="row gy-5 text-center">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-              <h1 class="titulo-contacto">Contáctame</h1>
+              <h1 class="titulo-contacto"><span>Contá</span>ctame</h1>
 
               <form>
                 <div class="form-group mb-4">
@@ -328,13 +349,17 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="iconos-sociales-footer">
-              <a href="https://www.linkedin.com/in/danielrojasdop/" target="_blank"
+              <a
+                href="https://www.linkedin.com/in/danielrojasdop/"
+                target="_blank"
                 ><i class="fa-brands fa-linkedin" style="color: #f3c03e"></i
               ></a>
               <a href="https://github.com/notdanielrojas" target="_blank"
                 ><i class="fa-brands fa-github" style="color: #f3c03e"></i
               ></a>
-              <a href="https://www.instagram.com/notdanielrojas/" target="_blank"
+              <a
+                href="https://www.instagram.com/notdanielrojas/"
+                target="_blank"
                 ><i class="fa-brands fa-instagram" style="color: #f3c03e"></i
               ></a>
               <a href="https://twitter.com/notdanielrojas" target="_blank"
