Modificada imágenes (border radius)

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <img
                 src="./assets/img/about.jpg"
                 alt="Imagen de Daniel Rojas"
-                class="pb-5"
+                class="pb-5 me-4"
                 width="80%"
               />
             </div>
