Modificado menú y styles

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon bg-warning"></span>
+            <span class="navbar-toggler-icon "></span>
           </button>
           <div class="menu">
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ms-auto">
                 <a
-                  class="nav-link active text-white"
+                  class="nav-link active"
                   aria-current="page"
                   href="#home"
                   ><i
@@ -63,19 +63,19 @@
                     style="color: #f3c03e"
                   ></i
                 ></a>
-                <a class="nav-link text-white text-warning" href="#about"
+                <a class="nav-link text-warning" href="#about"
                   ><i
                     class="fa-solid fa-circle-info fa-2x me-3"
                     style="color: #f3c03e"
                   ></i
                 ></a>
-                <a class="nav-link text-white me-3" href="#portfolio"
+                <a class="nav-link me-3" href="#portfolio"
                   ><i
                     class="fa-solid fa-briefcase fa-2x"
                     style="color: #f3c03e"
                   ></i
                 ></a>
-                <a class="nav-link text-white" href="#form"
+                <a class="nav-link" href="#form"
                   ><i
                     class="fa-solid fa-envelope fa-2x me-5"
                     style="color: #f3c03e"
