Modificado error tipográfico

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 avanzado del inglés.
                 <br /><strong
                   >Actualmente, estoy estudiando Desarrollo FullStack Developer
-                  JavaScript en Academia LATAM.</strong
+                  JavaScript en Desafío LATAM.</strong
                 >
               </p>
               <div class="mytabs">
